# nexus

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml  setup.sh
adapter_sdk/: Cargo.toml
adapter_sdk/src/: adapter.rs  adapter_zkvm.rs  api.rs  db.rs  lib.rs  main.rs  proof_storage.rs  rollup.rs  service.rs  state.rs  traits.rs  types.rs
adaptor/: Cargo.toml
adaptor/src/: main.rs
aggregator/: Cargo.toml
aggregator/agg_host/: Cargo.toml
aggregator/agg_prover/: Cargo.toml
aggregator/agg_prover/guest/: Cargo.toml
aggregator/agg_prover/guest/src/: main.rs
aggregator/core/: Cargo.toml
aggregator/core/src/: lib.rs
aggregator/g16_verifier/: Cargo.toml
aggregator/g16_verifier/src/: verifier.rs
aggregator/host/: Cargo.toml
aggregator/host/src/: main.rs
aggregator/methods/: Cargo.toml
aggregator/methods/guest/: Cargo.toml
aggregator/methods/guest/src/: main.rs
aggregator/src/: main.rs  rpc.rs
contracts/: .env.example  (+6 more)
core/: Cargo.toml
core/src/: agg_types.rs  db.rs  h256.rs  lib.rs  mempool.rs  new_stf.rs  prover.rs  simple_state_machine.rs  simple_stf.rs  simple_zkvm_state_machine.rs  state_machine.rs  stf.rs  traits.rs  trie.rs  types.rs  zkvm_state_machine.rs
core/src/state/: merkle_store.rs  mod.rs  types.rs  vm_state.rs
core/src/utils/: hasher.rs
core/src/zkvm/: mod.rs  risczero.rs  sp1.rs  spone.rs  traits.rs
demo_rollup/host/: Cargo.toml
demo_rollup/host/src/: main.rs
demo_rollup/methods/guest/: Cargo.toml
demo_rollup/methods/guest/src/: main.rs
examples/demo_rollup/core/: Cargo.toml
examples/demo_rollup/host/: Cargo.toml
examples/demo_rollup/host/src/: main.rs
examples/demo_rollup/methods/guest/: Cargo.toml
examples/ethereum_adapter/host/: .env  Cargo.toml
examples/ethereum_adapter/host/src/: lib.rs  main.rs
examples/mock_geth_adapter/bench_setup/: Cargo.toml
examples/mock_geth_adapter/bench_setup/headers/: nexus_header.json
examples/mock_geth_adapter/bench_setup/src/: main.rs
examples/mock_geth_adapter/core/: Cargo.toml
examples/mock_geth_adapter/core/src/: cell.rs  crypto.rs  lib.rs  rpc.rs  tests.rs  utils.rs
examples/zksync_adapter/bench/: Cargo.toml
examples/zksync_adapter/bench/src/: adapter_bench.rs
examples/zksync_adapter/benches/: Cargo.toml
examples/zksync_adapter/benches/src/: proof_bench.rs  x_main.rs
examples/zksync_adapter/core/: Cargo.toml
examples/zksync_adapter/core/example/: sample.rs
examples/zksync_adapter/core/src/: constants.rs  lib.rs  prover.rs  transcript.rs  types.rs  utils.rs  verifier.rs
examples/zksync_adapter/host/: Cargo.toml  adapter_logs.txt  arguments_output_server.txt  profile.pb
examples/zksync_adapter/host/benches/: adapter_bench.rs
examples/zksync_adapter/host/src/: arguments_output.txt  constants.rs  main.rs  mock_tx.json  proof_api.rs
examples/zksync_adapter/methods/: Cargo.toml  build.rs
examples/zksync_adapter/methods/guest/: Cargo.toml
examples/zksync_adapter/methods/risc0-guest/: Cargo.toml
examples/zksync_adapter/methods/risc0_guest/: Cargo.toml
examples/zksync_adapter/methods/sp1-guest/: Cargo.toml
examples/zksync_adapter/methods/sp1_guest/: Cargo.toml
examples/zksync_adapter/methods/src/: lib.rs  zksync_prover.rs
nexus/bench/: Cargo.toml
nexus/bench/mock_data/: avail_header.json
nexus/bench/src/: avail_header.json  header_store.json  nexus_bench.rs
nexus/bench/src/headers/: nexus_header.json  nexus_header_1.json  nexus_header_2.json
nexus/bench/src/init_account_transactions/: init_account_txn_0.json  init_account_txn_1.json  init_account_txn_10.json  init_account_txn_11.json  init_account_txn_12.json  init_account_txn_13.json  init_account_txn_14.json  init_account_txn_15.json  init_account_txn_16.json  init_account_txn_17.json  init_account_txn_18.json  init_account_txn_19.json  init_account_txn_2.json  init_account_txn_20.json  init_account_txn_21.json  init_account_txn_22.json  init_account_txn_23.json  init_account_txn_24.json  init_account_txn_25.json  init_account_txn_26.json  init_account_txn_27.json  init_account_txn_28.json  init_account_txn_29.json  init_account_txn_3.json  init_account_txn_30.json  init_account_txn_31.json  init_account_txn_32.json  init_account_txn_33.json  init_account_txn_34.json  init_account_txn_35.json  init_account_txn_36.json  init_account_txn_37.json  init_account_txn_38.json  init_account_txn_39.json  init_account_txn_4.json  init_account_txn_40.json  init_account_txn_41.json  init_account_txn_42.json  init_account_txn_43.json  init_account_txn_44.json  (+60 more)
nexus/bench/src/submit_proof_transactions/: submit_proof_transaction_0.json  submit_proof_transaction_13.json  submit_proof_transaction_14.json  submit_proof_transaction_16.json  submit_proof_transaction_18.json  submit_proof_transaction_2.json  submit_proof_transaction_20.json  submit_proof_transaction_21.json  submit_proof_transaction_24.json  submit_proof_transaction_25.json  submit_proof_transaction_26.json  submit_proof_transaction_27.json  submit_proof_transaction_30.json  submit_proof_transaction_31.json  submit_proof_transaction_34.json  submit_proof_transaction_40.json  submit_proof_transaction_41.json  submit_proof_transaction_42.json  submit_proof_transaction_45.json  submit_proof_transaction_5.json  submit_proof_transaction_50.json  submit_proof_transaction_51.json  (+127 more)
nexus/host/: Cargo.toml
nexus/host/src/: avail_da_submitter.rs  lib.rs  main.rs  rpc.rs  sp1_aggregation.rs
nexus/host/tests/: host.rs  rpc_tests.rs
nexus/prover/guest/: Cargo.toml
nexus/prover/risc0-guest/: Cargo.toml
nexus/prover/sp1-guest/: Cargo.toml
nexus_bench_setup/: Cargo.toml
nexus_bench_setup/mock_data/: init_account_txns.json
nexus_bench_setup/src/: main.rs
old_demo_rollup/: Cargo.toml
old_demo_rollup/src/: main.rs
relayer/: Cargo.toml
relayer/src/: lib.rs  main.rs  types.rs
smt_playground/: Cargo.toml
smt_playground/src/: main.rs
zk_evm_rollup/host/: Cargo.toml
zk_evm_rollup/host/src/: fetcher.rs  lib.rs  main.rs  utils.rs
zk_evm_rollup/methods/guest/: Cargo.toml
(+381 files in other folders)
