[workspace]
resolver = "2"
members = [
    "relayer",
    "core",
    "nexus/host",
    "nexus/prover",
    "examples/demo_rollup/host", 
    "examples/demo_rollup/methods",
    "examples/demo_rollup/core",
    "examples/mock_geth_adapter/host",
    "examples/mock_geth_adapter/methods",
    "examples/mock_geth_adapter/core",
    "examples/zksync_adapter/host",
    "examples/zksync_adapter/methods",
    "examples/zksync_adapter/core",
    "adapter_sdk",
    "smt_playground", 
    "nexus_cli", "examples/zksync_adapter/bench",
]

[patch.crates-io]
sp-core = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
sp-io = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
sp-runtime = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
sp-std = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
sp-core-hashing = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
# Remove below patch once rust version can be updated for zkvm
bumpalo = { git = "https://github.com/fitzgen/bumpalo", tag = "3.14.0" }
