[package]
name = "adapter_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", optional = true }
hex = { version = "0.4", optional = true }
tokio-stream = { version = "0.1.14", optional = true}
reqwest = {version = "0.11.24", features = ["json"], optional = true}
nexus-core = { path = "../core", default-features = false }
serde = "1.0.203"
serde_json = "1.0.113"
anyhow = "1.0.81"
warp = { version = "0.3", optional = true }
risc0-zkvm = {version = "0.20", default-features = false, features = ["std"]}
relayer = { path = "../relayer", optional = true}
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", optional = true }

[features]
default = ["native"]
native = ["nexus-core/native", "risc0-zkvm/default", "relayer", "reqwest", "hex", "tokio", "tokio-stream", "warp"]
zkvm = ["nexus-core/zkvm"]
sp1 = ["sp1-sdk"]
risc0 = ["risc0-zkvm/default"]
