[package]
name = "nexus-core"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.11.0.0", features = ["std"], optional = true}
avail-core = { version = "0.5", git = "https://github.com/availproject/avail-core", tag = "avail-core/v0.5.0", optional = true}
serde = "1.0.196"
sparse-merkle-tree = { git = "https://github.com/vibhurajeev/sparse-merkle-tree.git", rev = "a2f94a7", optional = true, default-features = false }
rocksdb = {version = "0.22.0", optional = true }
serde_json = "1.0.114"
parity-scale-codec = { version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
blake2b_simd = "1.0.2"
serde-big-array = "0.5.1"
tokio = {version = "1.36.0", optional = true}
bincode = "1.3.3"
solabi = "0.2.0"
jmt = { git = "https://github.com/vibhurajeev/jmt.git", features = ["mocks"]}
ethabi = "18.0.0"
sp1-sdk = { version = "3.4.0" , optional = true}
sp1-zkvm = { version = "3.4.0", optional = true}
risc0-zkvm = { version = "1.2.1", default-features = false, features = ["std", "unstable"], optional = true}
sha2 = { version = "0.10.8", optional = true }
hex = "0.4.3"
winnow = "0.6.18"
tracing = { version = "0.1.41", optional = true }
utoipa = { version = "5.3", optional = true }

[features]
# default = ["native-risc0"]
native = ["rocksdb", "sparse-merkle-tree/arch-64", "sparse-merkle-tree/std", "avail-subxt", "avail-core", "tokio", "dep:tracing", "utoipa"]
zkvm = ["sparse-merkle-tree/arch-32", "sparse-merkle-tree/std"]
native-sp1 = ["sp1-sdk", "sp1-zkvm/verify", "sha2", "native"]
native-risc0 = ["risc0-zkvm/default", "native"]
zkvm-sp1 = ["sp1-zkvm/verify", "zkvm", "sha2"]
zkvm-risc0 = ["risc0-zkvm/std", "zkvm"]
