[package]
name = "nexus_bench_setup"
version.workspace = true
edition = "2021"

[dependencies]
geth-methods = { path = "../examples/mock_geth_adapter/methods" }
nexus-host = {package = "host", path = "../nexus/host", default-features = false , optional = true} 
prover = { path = "../nexus/prover", optional = true }
risc0-zkvm = { version = "1.1.1", features = ["default"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rocksdb = {version = "0.22.0"}
serde = "1.0"
nexus-core = { path = "../core", features = ["native-risc0"] }
serde_json = "1.0.114"
tokio = "1.36.0"
sp-runtime = "33.0.0"
parity-scale-codec = { version = "3", default-features = false, features = [
  "derive",
  "max-encoded-len",
] }
relayer = { path = "../relayer" }
adapter_sdk = { path = "../adapter_sdk", features = ["native-risc0"] }
geth-adapter-core = { path = "../examples/mock_geth_adapter/core" }
anyhow = "1.0.80"
actix-web = "4.5.1"
warp = "0.3.6"
web3 = "0.19.0"

[features]
default = ["risc0"]
risc0 = ["nexus-core/native-risc0", "prover/risc0", "nexus-host/risc0" ]
sp1 = ["nexus-core/native-sp1" , "prover/sp1" , "nexus-host/sp1" ]

[env]
RUST_LOG = "info"