[package]
name = "demo_rollup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
reqwest = {version = "0.11.24", features = ["json"]}
tokio = "1.36.0"
nexus-core = { path = "../core", features = ["zkvm"]}
adapter_sdk = { path = "../adapter_sdk"}
serde = "1.0.197"
