[package]
name = "aggregator-host"
version = "0.1.0"
edition = "2021"

[dependencies]
aggregator_methods = { path = "../methods" }
risc0-zkvm = { version = "0.20" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
nexus-core = { path = "../../core"}
serde_json = "1.0.114"
adapter_sdk = { path = "../../adapter_sdk" }
anyhow = "1.0.80"
bincode = "1.3.3"
