[package]
name = "adapter-host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21", features = ["metal"] }
nexus-core = { path = "../../core"}
tokio = "1.36.0"
adapter_sdk = { path = "../../adapter_sdk" }
demo_rollup_core = { path = "../core" }
