[package]
name = "bench-nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-core = { path = "../../core" , default-features = false, optional = true }
prover = { path = "../prover", optional = true }
sparse-merkle-tree = { git = "https://github.com/vibhurajeev/sparse-merkle-tree.git", rev = "a2f94a7", default-features = false }
primitive-types = "0.12"
risc0-zkvm = {version = "1.0.5", default-features = false, features = ["std"], optional = true}
sp1-sdk = { version = "3.4.0", optional = true }
bincode = "1.3.3"
env_logger = "0.11.5"
log = "0.4.22"
nexus-host = {package = "host", path = "../host", default-features = false , optional = true} 
rocksdb = {version = "0.22.0"}
tokio = "1.36.0"
serde_json = "1.0.114"

[[bench]]
name = "nexus_bench"
path = "src/nexus_bench.rs"
harness = false #disable default harness

[features]
default = ["risc0"]
risc0 = ["nexus-core/native-risc0", "risc0-zkvm/cuda" , "prover/risc0" , "nexus-host/risc0" ]
sp1 = ["nexus-core/native-sp1" , "sp1-sdk/cuda" , "prover/sp1" , "nexus-host/sp1" ]

[env]
RUST_LOG = "info"