[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.11.0.0", features = ["std"]}
prover = { path = "../prover" }
risc0-zkvm = { version = "0.20" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
nexus-core = { path = "../../core"}
serde_json = "1.0.114"
tokio = "1.36.0"
sp-runtime = "33.0.0"
parity-scale-codec = { version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
relayer = { path = "../../relayer" }
anyhow = "1.0.80"
warp = "0.3.6"
bincode = "1.3.3"
rocksdb = {version = "0.22.0"}
jmt = { git = "https://github.com/vibhurajeev/jmt.git", features = ["mocks"]}
hex = "0.4.3"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" , optional = true}

[features]
spone = ["sp1-sdk", "nexus-core/spone"]

[patch.crates-io]
serde = { version = "1.0.204" }
