[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.11.0.0", features = ["std"]}
prover = { path = "../prover", optional = true }
risc0-zkvm = { version = "1.1.1", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
nexus-core = { path = "../../core", optional = true }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["signal"]}
sp-runtime = "33.0.0"
parity-scale-codec = { version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
relayer = { path = "../../relayer" }
anyhow = "1.0.80"
warp = "0.3.6"
bincode = "1.3.3"
rocksdb = {version = "0.22.0"}
jmt = { git = "https://github.com/vibhurajeev/jmt.git", features = ["mocks"]}
hex = "0.4.3"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" , optional = true}
mockall = "0.13.1"

[features]
default = ["risc0"] # need to change this to run with sp1
sp1 = ["sp1-sdk", "nexus-core/native-sp1", "prover/sp1"]
risc0 = ["risc0-zkvm/std", "nexus-core/native-risc0", "prover/risc0"]

[patch.crates-io]
serde = { version = "1.0.204" }
