[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.20", default-features = false, features = ["std"] }
nexus-core = { path = "../../../core", default-features = false, features = ["zkvm"]}
adapter_sdk = { path = "../../../adapter_sdk" }
demo_rollup_core = { path = "../../core" }