[package]
name = "bench-setup"
version.workspace = true
edition = "2021"

[dependencies]
geth-methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.1", features = ["default"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
nexus-core = { path = "../../../core", features = ["native-risc0"] }
serde_json = "1.0.114"
tokio = "1.36.0"
sp-runtime = "33.0.0"
parity-scale-codec = { version = "3", default-features = false, features = [
  "derive",
  "max-encoded-len",
] }
relayer = { path = "../../../relayer" }
adapter_sdk = { path = "../../../adapter_sdk", features = ["native-risc0"] }
geth-adapter-core = { path = "../core" }
anyhow = "1.0.80"
actix-web = "4.5.1"
warp = "0.3.6"
web3 = "0.19.0"
