[package]
name = "zksync-adapter-host"
version = "0.1.0"
edition = "2021"

[dependencies]
zksync-methods = { path = "../methods", default-features = false }
risc0-zkvm = { version = "1.0.5", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
nexus-core = { path = "../../../core", default-features = false, optional = true }
serde_json = "1.0.114"
tokio = "1.36.0"
sp-runtime = "33.0.0"
parity-scale-codec = { version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
relayer = { path = "../../../relayer" }
adapter_sdk = { path = "../../../adapter_sdk", default-features = false }
zksync-core = { path = "../core", default-features = false }
anyhow = "1.0.80"
actix-web = "4.5.1"
warp = "0.3.6"
web3 = "0.19.0"
reqwest = { version = "0.12.5", features = ["json"] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" , optional = true }
num-bigint = "0.4"
primitive-types = "0.12"

[features]
default = ["risc0"]
sp1 = ["sp1-sdk", "nexus-core/native" , "zksync-methods/sp1" , "zksync-core/sp1" , "adapter_sdk/zkvm-sp1"]
risc0 = ["risc0-zkvm/std", "nexus-core/native" , "zksync-methods/risc0" , "zksync-core/risc0" , "adapter_sdk/zkvm-risc0"]

